Fix remaining horizontal scrollbars on mobile

--- a/pelican/themes/smallweb/static/css/style.css
+++ b/pelican/themes/smallweb/static/css/style.css
@@ -29,7 +29,7 @@
 }
 
 
-html {
+html, body {
   max-width: 100%;
   overflow-x: hidden;
 }
@@ -92,7 +92,7 @@ blockquote em {
 }
 #menu {
   position: absolute;
-  padding-top: 3rem;
+  padding: 3rem 0 0 0;
   top: 0;
   left: 0;
   right: 0;
@@ -127,7 +127,7 @@ blockquote em {
 #menu .button {
   font-size: 80%;
   position: absolute;
-  right: 1em;
+  right: 0.3em;
   top: 0.3em;
   color: var(--text-color-inverted);
   border-color: var(--text-color-inverted);
